2011-09-14  John Bauman  <jbauman@chromium.org>

        [chromium] Return correct value for getContextAttributes().preserveDrawingBuffer
        https://bugs.webkit.org/show_bug.cgi?id=68082

        Reviewed by Kenneth Russell.

        WebKit::WebGraphicsContext3D::Attributes doesn't save
        preserveDrawingBuffer, so that has to be saving in
        GraphicsContext3DPrivate.

        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DPrivate::GraphicsContext3DPrivate):
        (WebCore::GraphicsContext3DPrivate::create):
        (WebCore::GraphicsContext3DPrivate::createGraphicsContextFromWebContext):
        (WebCore::GraphicsContext3DPrivate::getContextAttributes):
        * src/GraphicsContext3DPrivate.h:

2011-09-14  Antoine Labour  <piman@chromium.org>

        Remove the dependency on GraphicsLayer from CCLayerTreeHost.
        Move root layer management into the NonCompositedContentHost.
        Have WebViewImpl create a NonCompositedContentHost explicitly.
        https://bugs.webkit.org/show_bug.cgi?id=67883

        Reviewed by James Robinson.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setRootGraphicsLayer):
        (WebKit::WebViewImpl::invalidateRootLayerRect):
        (WebKit::WebViewImpl::setIsAcceleratedCompositingActive):
        (WebKit::WebViewImpl::updateLayerTreeViewport):
        (WebKit::WebViewImpl::setVisibilityState):
        * src/WebViewImpl.h:

2011-09-14  Nebojsa Ciric  <cira@chromium.org>

        Changed WebKit.gyp to use the new grit version of the scripts that handle
        .pak files.
        https://bugs.webkit.org/show_bug.cgi?id=68013

        Reviewed by Tony Chang.

        * DEPS:
        * WebKit.gyp:

2011-09-14  Anders Carlsson  <andersca@apple.com>

        Fix Chromium build.

        * src/ResourceHandle.cpp:

2011-09-13  Eric Seidel  <eric@webkit.org>

        Remove ENABLE_SVG_USE as <use> is required by HTML5
        https://bugs.webkit.org/show_bug.cgi?id=68019
