@@ -1,3 +1,15 @@
+2011-09-14  Peter Beverloo  <peter@chromium.org>
+
+        [Chromium] Make WEB_AUDIO conditional and fix the build when disabled
+        https://bugs.webkit.org/show_bug.cgi?id=68107
+
+        Reviewed by Kenneth Russell.
+
+        * features.gypi:
+        * src/WebMediaPlayerClientImpl.cpp:
+        (WebKit::WebMediaPlayerClientImpl::audioSourceProvider):
+        * src/WebMediaPlayerClientImpl.h:
+
 2011-09-14  John Bauman  <jbauman@chromium.org>
 
         [chromium] Return correct value for getContextAttributes().preserveDrawingBuffer
